--- a/Guia17Ex03.css
+++ b/Guia17Ex03.css
@@ -12,7 +12,18 @@ body{
     background-color: rgba(150, 218, 235, 0.844);
     border-radius: 20px;
 }
-
+#carouselExampleControls{
+    text-align: center;
+    margin: 20px;
+    padding: 10px;
+    border: 3px solid rgb(113, 132, 201);
+    background-color: rgba(150, 218, 235, 0.844);
+    border-radius: 20px;
+    max-height: 20%;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+}
 .boton_caja{
     background-color: rgb(41, 69, 94);
 }
